# Pikt

src/: rebuild_all.sh
src/pikt-basics/: CMakeCache.txt  CMakeLists.txt  Makefile  _factory.cpp  blur.hpp  channelprod.hpp  channelswap.hpp  cimgLoader.hpp  cimgSaver.hpp  cmake_install.cmake  grayscale.hpp  huerot.hpp  readme.md  sepia.hpp
src/pikt-core/: CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Makefile  cmake_install.cmake  cmdParser.cpp  cmdParser.hpp  main.cpp
src/pikt-core/dependencies/: CMakeLists.txt  Makefile  cimg.h  cmake_install.cmake
src/pikt-core/extendables/: CMakeLists.txt  Makefile  cmake_install.cmake  imgProcessor.hpp  plugin.cpp  plugin.hpp  pluginManager.cpp  pluginManager.hpp
src/pikt-io/: CMakeCache.txt  CMakeLists.txt  Makefile  _factory.cpp  cimgLoader.hpp  cimgSaver.hpp  cmake_install.cmake
src/pikt-opengl/: CMakeCache.txt  CMakeLists.txt  Makefile  _factory.cpp  cmake_install.cmake  glout.hpp  gloutGP.hpp
src/pikt-openmp/: CMakeCache.txt  CMakeLists.txt  Makefile  _factory.cpp  border.hpp  checkers.hpp  cmake_install.cmake  pix.hpp
src/pikt-thread/: CMakeCache.txt  CMakeLists.txt  Makefile  _factory.cpp  checkersth.hpp  checkersthWorker.cpp  checkersthWorker.hpp  cmake_install.cmake
src/pikt-thread/rand/: rand.hpp
